# oz_django_week

./: pyproject.toml  test.py
.github/workflows/: ci.yml
djangoProject/: settings.py  urls.py
tabom/: create_tables.py  models.py
tabom/migrations/: 0001_initial.py
tabom/tests/: test_like_service.py
