[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["jm-jung <jmsk7554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
black = "^24.8.0"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
django-ninja = "^1.3.0"
schema = "^0.7.7"
mysql-connector-python = "^9.0.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
django-stubs = "^5.0.4"
types-pymysql = "^1.1.0.20240524"
coverage = "^7.6.1"

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
omit = [
  ".mypy_cache/**/*",
  "*/migrations/*",
  "*/*test*.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "djangoProject.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#함수를 호출하는 코드를 클라이언트 코드라고 지칭
#함수를 수정했고 클라이언트 코드를 수정하지않아도 될때 하위호환성을 지키는 수정을 한다
#ex 3.12.4// 3->major(하위호환성 X)/ 12->minor(여기까지 하위호환성 O)/ 4->patch